Migrate to junit jupiter